Fixed text overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,8 @@ li {
   position: relative;
   margin: 10px;
   text-align: left;
+  word-wrap: break-word;
+  max-width:70%;
 }
 
 .profile-info {
